--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
-  "gcc-plugin-python-0.6.53gfbfa7fa.tar.bz2": a48f448c6e987f580eb7bfe8747a1e4cc327d795
+  gcc-plugin-python-0.6.53gfbfa7fa.tar.bz2: a48f448c6e987f580eb7bfe8747a1e4cc327d795
+  gcc-python-plugin-0.12.tar.gz: 79a560d6c99eef2df59c2f494363c5be12950d5b
